solved the problem of too much content in main

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,14 @@ body {
     min-height: 100vh;
 }
 
+#container {
+    position: relative;
+    width: 100%;
+    min-height: 100%;
+    padding-bottom: 100px;
+    box-sizing: border-box;
+}
+
 header {
     background-color: #333;
     color: white;
@@ -46,6 +54,7 @@ main {
     flex: 1;
     max-width: 100%;
     margin-top: 80px;
+    margin-bottom: 100px;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -73,6 +82,8 @@ footer {
     padding: 10px;
     background-color: #333;
     color: white;
+    height: 100px;
+    position:absolute;
 }
 
 /* Responsive Design */
